--- a/layouts/programming-blog/list.html
+++ b/layouts/programming-blog/list.html
@@ -10,7 +10,7 @@
     {{ end }}
     </ul>
 
-    <p>--<br/>The site is still under construction 🚧 but *soon* you'll be able to see me here publishing *articles* again. Yay!</p>
+    <p>--<br/>The blog is still under construction 🚧<br/>*Soon* I'll be publishing articles again. Yay!</p>
 
     <p>
         <a href="{{ "programming-blog/archive" | relURL }}"><button>Older Articles</button></a>
