--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode | default "en-us" }}">
 <head>
-	<title>{{ .Params.Title }} - {{ .Site.Params.default_title }}</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="{{ .Site.Params.default_description }}">
-	<meta name="author" content="{{ . }}">
-	<meta name="keywords" content="{{ delimit .Site.Params.default_tags ", "}}">
+	<meta property="og:title" content="{{ .Params.Title }}" />
+	<meta name="description" property="og:description" content="{{ .Site.Params.default_description }}" />
+	<meta name="author" content="{{ .Site.Author.name }}" />
+	<meta name="keywords" content="{{ delimit .Site.Params.default_tags ", "}}" />
+	<meta property="og:image" content="{{ "img/rounded-avatar.png" | relURL }}" />
 
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Karla">
-	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
+	<!-- styles -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Karla" />
+	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
+	<!-- /styles -->
 
-	<link rel="shortcut icon" type="image/png" rel="icon" href="{{ "img/rounded-avatar.png" | relURL }}"/>
-
+	<!-- favicons -->
+	<link rel="shortcut icon" type="image/png" rel="icon" href="{{ "img/rounded-avatar.png" | relURL }}"/ />
+	<link rel="shortcut icon" type="image/x-icon" rel="icon" href="{{ "img/rounded-avatar.png" | relURL }}"/ />
+	<!-- /favicons -->
 	{{ with .OutputFormats.Get "rss" -}}
 		{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 	{{ end -}}
 
 	{{ .Hugo.Generator }}
+
+	<title>{{ .Params.Title }}</title>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
