--- a/layouts/programming-blog/list.html
+++ b/layouts/programming-blog/list.html
@@ -10,7 +10,7 @@
     {{ end }}
     </ul>
 
-    <p>--<br/>The blog is still under construction 🚧<br/>*Soon* I'll be publishing articles again. Yay!</p>
+    <p>--<br/>Did you find an article interesting or have a question? Do not hesitate and contact me via <a target="_blank" href="{{ .Site.Social.twitter_link }}">twitter</a> or <a href="mailto:{{ .Site.Social.email }}?subject=Email from the blog">email</a>. Do you like an article? Share it :)</p>
 
     <p>
         <a href="{{ "programming-blog/archive" | relURL }}"><button>Older Articles</button></a>
