--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,4 @@
 {{ partial "header.html" . }}
 {{ partial "top-nav.html" . }}
-    <p>Page not found.</p>
+    <p>Sorry, page not found.</p>
 {{ partial "footer.html" . }}
