--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode | default "en-us" }}">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>{{ .Params.Title }} - {{ .Site.Author.name }}</title>
 
-	<meta property="og:title" content="{{ .Params.Title }}" />
-	<meta name="description" property="og:description" content="{{ .Site.Params.default_description }}" />
-	<meta name="author" content="{{ .Site.Author.name }}" />
-	<meta name="keywords" content="{{ delimit .Site.Params.default_tags ", "}}" />
-	<meta property="og:image" content="{{ "img/favicon.jpg" | relURL }}" />
+	{{ partial "header/meta-base.html" . }}
+	{{ partial "header/meta-article.html" . }}
 
-	<!-- styles -->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Karla" />
-	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
-	<!-- /styles -->
+	{{ partial "header/css.html" . }}
+	{{ partial "header/favicons.html" . }}
+	{{ partial "header/rss.html" . }}
 
-	<!-- favicons -->
-	<link rel="shortcut icon" type="image/jpg" href="{{ "img/favicon.jpg" | relURL }}"/ />
-	<link rel="shortcut icon" type="image/x-icon" href="{{ "img/favicon.ico" | relURL }}"/ />
-	<!-- /favicons -->
-	{{ with .OutputFormats.Get "rss" -}}
-		{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
-	{{ end -}}
-
-	{{ .Hugo.Generator }}
-
-	<title>{{ .Params.Title }}</title>
-
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-4112786-17', 'auto');
-		ga('send', 'pageview');
-	</script>
+	{{ partial "header/google-analytics.html" . }}
 </head>
 <body>
 	<main id="main-container" class= "{{ if gt (len .Section) 0 }} width-{{ .Section }} {{ else }} width-default {{ end }}">
