Add Talks section

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,4 +13,4 @@
 	{{ partial "header/google-analytics.html" . }}
 </head>
 <body>
-	<main id="main-container" class= "{{ if gt (len .Section) 0 }} width-{{ .Section }} {{ else }} width-default {{ end }}">
+	<main id="main-container" class= "width-default">
