--- a/layouts/partials/top-nav.html
+++ b/layouts/partials/top-nav.html
@@ -3,5 +3,6 @@
     <ul>
         <li><a href="{{ "programming-blog" | relURL }}">blog</a></li>
         <li><a href="/">about</a></li>
+        <li><a href="{{ "talks" | relURL }}">talks</a></li>
     </ul>
 </div>
