--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,17 @@
 {{ partial "header.html" . }}
 {{ partial "top-nav.html" . }}
-    <p>Hi, my name is Tomasz 🧔🏻, and I'm a *software engineer* with {{ sub .Site.Params.current_year 2012 }} years of 
-professional experience, mainly focused on iOS apps development. Currently I'm doing my best at <a class="intive" href="https://intive.com">intive</a> 💪🏻.
-    </p>
+    <p>Hi, my name is Tomasz Szulc 🧔🏻, and I'm a *software engineer* since 2012, mainly focused on iOS and tvOS apps development 💪🏻.</p>
 
     <p>
         You can find me on: 
-        <a target="_blank" href="{{ .Site.Social.twitter_link }}">twitter</a>,
         <a target="_blank" href="{{ .Site.Social.linkedin_link }}">linkedin</a>,
         <a target="_blank" href="{{ .Site.Social.github_link }}">github</a>, 
         or even on <a target="_blank" href="{{ .Site.Social.instagram_link }}">instagram</a> if you are a runner 🏃‍🔥 :)
-        Also you can drop me an <a href="mailto:{{ .Site.Social.email }}?subject=Email from the blog">email</a>.
+        Got question? Drop me an <a href="mailto:{{ .Site.Social.email }}?subject=Email from the blog">email</a>.
     </p>
 
     <h3 class="margin-bottom-0">Testimonials</h3>
-    <p>Go ahead and throw an eye on my <a target="_blank" href="https://linkedin.com/in/tomkowz">linkedin</a> for those.</p>
+    <p>Check <a target="_blank" href="https://linkedin.com/in/tomkowz">linkedin</a> for those.</p>
 
     <p>🚀</p>
 {{ partial "footer.html" . }}
