--- a/layouts/programming-blog/list.html
+++ b/layouts/programming-blog/list.html
@@ -1,5 +1,8 @@
 {{ partial "header.html" . }}
 {{ partial "top-nav.html" . }}
+
+<p>--<br/>I am currently fully committed to building our house with bare hands. See more: <a target="_blank" href="https://youtube.com/c/ProgramistaNaBudowie">Youtube: Programista Na Budowie</a>--<br/></p>
+
 <h3>Newest Articles</h3>
 
 {{ $articles := (where .Pages "Params.type" "programming-blog/article") }}
