--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,11 @@
 {{ partial "header.html" . }}
 {{ partial "top-nav.html" . }}
-    <p>Hi, my name is Tomasz Szulc 🧔🏻, and I'm a *software engineer* since 2012, mainly focused on iOS and tvOS apps development 💪🏻.</p>
 
-    <p>--<br/>I am currently fully committed to building our house with bare hands. See more: <a target="_blank" href="https://youtube.com/c/ProgramistaNaBudowie">Youtube: Programista Na Budowie</a>--<br/></p>
+    {{ partial "notice-job-offers.html" . }}
+    {{ partial "notice-youtube-channel.html" . }}
 
+    <p>Hi, my name is Tomasz Szulc 🧔🏻, and I'm a *software engineer* since 2012, mainly focused on iOS and tvOS apps development. 💪🏻</p>
+    
     <p>
         You can find me on: 
         <a target="_blank" href="{{ .Site.Social.linkedin_link }}">linkedin</a>,
