--- a/layouts/programming-blog/list.html
+++ b/layouts/programming-blog/list.html
@@ -1,7 +1,8 @@
 {{ partial "header.html" . }}
 {{ partial "top-nav.html" . }}
 
-<p>--<br/>I am currently fully committed to building our house with bare hands. See more: <a target="_blank" href="https://youtube.com/c/ProgramistaNaBudowie">Youtube: Programista Na Budowie</a>--<br/></p>
+{{ partial "notice-job-offers.html" . }}
+{{ partial "notice-youtube-channel.html" . }}
 
 <h3>Newest Articles</h3>
 
